<resources>
    <string name="app_name">FitVerse</string>
    <string name="logo">logo</string>
    <string name="title_login">Login to FitVerse</string>
    <string name="message_login">Masukkan email dan password anda</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="copyright">copyright 2022 FitVerse</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Register</string>
    <string name="title_register">Lengkapi data dirimu di bawah ini</string>
    <string name="name">Nama</string>
    <string name="register">Register</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="scan_food_ingredient">Scan Food \nIngredient</string>
    <string name="food_list">Food \nList</string>
    <string name="food_news">Food \nNews</string>
    <string name="scan_fitness_motion">Scan Fitness \nMotion</string>
    <string name="exercise_list">Exercise \nList</string>
    <string name="fitness_news">Fitness \nNews</string>
    <string name="recent_scans">Recent Scans</string>
    <string name="title_profile">Profile</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="avatar">Avatar</string>
    <string name="nama">Nama</string>
    <string name="tes">Lorem ipsum dolor sit Lorem ipsum dolor sitLorem ipsum dolor sitLorem ipsum dolor sitLorem ipsum dolor sitLorem ipsum dolor sitLorem ipsum dolor sitLorem ipsum dolor sitLorem ipsum dolor sitLorem ipsum dolor sitLorem ipsum dolor sit</string>
    <string name="bookmark_colection">Bookmark collection</string>
    <string name="scan_favorite">Scan Favorite</string>
    <string name="search">Search...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Food</string>
    <string name="tab_text_2">Fitness</string>
    <string name="photo">photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="classified_as">Classified as :</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="fitness">Fitness</string>
    <string name="kandungan_nutrisi">Kandungan Nutrisi :</string>
    <string name="nama_gerakan_fitness">Nama Gerakan Fitness</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="food_photo">Food Photo</string>
    <string name="fitness_photo">Fitness Photo</string>
    <string name="data_tidak_ditemukan">Data tidak ditemukan.</string>
    <string name="loading">Loading...</string>
</resources>