<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        style="@style/blueTheme">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            app:srcCompat="@drawable/ic_profile"
            android:contentDescription="@string/avatar"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="65dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>